# feather

./: .gitignore  CMakeLists.txt  README.md
feather/: cursor.hpp  feather.cpp  feather.hpp  input.cpp  input.hpp  input_handler.hpp  input_handler_console.cpp  input_handler_console.hpp  main.cpp  manipulator.cpp  manipulator.hpp  manipulator.test.cpp  navigator.cpp  navigator.hpp  navigator.test.cpp  output_handler.hpp  output_handler_console.cpp  output_handler_console.hpp  serializer.hpp  serializer_filesystem.cpp  serializer_filesystem.hpp  serializer_filesystem.test.cpp
